css/style.css
* {
    margin: 0;
    padding: 0;
}

html, body {
    width: 100%;
    height: 100%;
    overflow: hidden;
    background-color: white;
}

.relative {
    position: relative;
    width: 100%;
    height: 100%;
}

.relative > * {
    position: absolute;
}

.game-world, .input-overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: 0;
    padding: 0;
}

.background {
    z-index: -2;
}

.player {
    z-index: 1;
}

.player .body {
    left: -10px;
    top: -10px;
    width: 20px;
    height: 20px;
    background-color: #AAA;
    border-radius: 10px;
}

.player .gun {
    top: -2px;
    left: -2px;
    width: 16px;
    height: 4px;
    background-color: #666;
}

.player.hurt .body {
    background-color: #811;
}

.player.hurt .gun {
    background-color: black;
}

.enemy .body {
    left: -10px;
    top: -10px;
    width: 18px;
    height: 18px;
    border: 1px solid #444;
    border-radius: 10px;
}

.enemy.hurt .body, .enemy.hurt .leg {
    background-color: #811 !important;
}

.bullet .body {
    left: -8px;
    top: -4px;
    width: 16px;
    height: 8px;
    background-color: orange;
}

.crosshair {
    width: 1px;
    height: 1px;
    background-color: black;
    z-index: 2;
}

.crosshair .body {
    top: -8px;
    left: -8px;
    width: 15px;
    height: 15px;
    border: 1px solid black;
    border-radius: 8px;
}

.input-overlay {
    cursor: none;
    z-index: 3;
}

.gameover-screen {
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.5);
    cursor: default;
    z-index: 4;
}

.gameover-screen .table {
    display: table;
    width: 500px;
    height: 100%;
    margin: 0 auto;
}

.gameover-screen .table-cell {
    display: table-cell;
    vertical-align: middle;
}

.gameover-screen .box {
    background-color: white;
    box-shadow: 0 0 2px black;
    border-radius: 10px;
    padding: 10px;
}

.gameover-screen header {
    text-align: center;
    font-size: 60px;
    padding-top: 10px;
}

.gameover-screen .congratulations {
    width: 100%;
    text-align: center;
    margin: 40px 0 50px 0;
    font-size: 20px;
}

.gameover-screen .congratulations .points {
    font-size: 30px;
    color: green;
}

.gameover-screen .highscores {
    width: 100%;
    text-align: center;
    padding-bottom: 20px;
}

.gameover-screen .highscores tbody:nth-child(odd) {
    background-color: #EEE;
}

.gameover-screen .highscores .current {
    color: green;
    font-weight: bold;
}

.gameover-screen button {
    width: 200px;
    height: 40px;
    font-size: 20px;
    display: block;
    margin: 20px auto;
}

.status-display {
    position: absolute;
    width: 100%;
    height: 100%;
}

.status-display .label {
    position: absolute;
    background-color: rgba(255, 255, 255, 0.75);
    font-variant: small-caps;
    z-index: 1;
}

.status-display .status {
    top: 0;
    width: 100%;
    text-align: center;
    color: green;
    font-size: 32px;
    font-variant: small-caps;
}

.status-display .copyright {
    bottom: 0;
    width: 100%;
    text-align: center;
    font-size: 12px;
    font-variant: small-caps;
}


.status-display .health-bar {
    width: 25%;
    height: 20px;
    top: 10px;
    left: 10px;
    background-color: #CCC;
    border: 1px solid black;
}

.status-display .health-bar .progress {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #A22;
}

.status-display .label span {
    color: green;
}

.status-display .health-bar .health-label {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding-top: 1px;
    text-align: center;
    font-weight: normal;
    color: white;
}

.spider.enemy .leg {
    top: -1px;
    height: 2px;
    background-color: black;
    z-index: -1;
}

.floating-text .body {
    left: -50px;
    width: 100px;
    text-align: center;
    font-size: 12px;p
    font-variant: small-caps;
    text-outline: 1px 0 0 white;
}

.powerup {
    z-index: -1;
}

.powerup .body {
    left: -12px;
    top: -8px;
    width: 24px;
    height: 16px;
    text-align: center;
    font-size: 12px;
    font-variant: small-caps;
    padding-top: 1px;
    background-color: white;
    border-radius: 5px;
    border: 1px solid black;
}

